# kremotecontrol

./: .gitignore  AUTHORS  CMakeLists.txt  CTestConfig.cmake  Mainpage.dox  Makefile.am  README  README.profile-creation  README.remote-creation  TODO  krazy.out  kremotecontrol-version.h
applet/: CMakeLists.txt  hisc-app-krcd.svgz
dataengine/: CMakeLists.txt  kremotecontrolengine.cpp  kremotecontrolengine.h  plasma-engine-kremotecontrol.desktop
doc/: CMakeLists.txt  index.docbook
doc/kdelirc/: CMakeLists.txt
doc/kdelirc/irkick/: index.docbook
doc/kdelirc/kcmlirc/: index.docbook
icons/: CMakeLists.txt  Makefile.am
irkick/: CMakeLists.txt  Makefile.am  Messages.sh  irkick.cpp  irkick.desktop  irkick.h  irkick.notifyrc  irkick.project  kdedmodule_stub.h  klircclient.cpp  klircclient.h  main.cpp  org.kde.irkick.xml
irkick/icons/: CMakeLists.txt  Makefile.am  oxsc-action-irkickflash.svgz  oxsc-action-irkickoff.svgz  oxsc-app-irkick.svgz
irkick/templates/: cpp_template  header_template
kcmlirc/: CMakeLists.txt  Makefile.am  Messages.sh  actioncontainer.cpp  actioncontainer.h  actioncontainer.ui  addaction.cpp  addaction.h  addaction.ui  addactionbase.ui  configurationwidget.ui  dbusinterface.cpp  dbusinterface.h  editaction.cpp  editaction.h  editactionbase.ui  editactioncontainer.cpp  editactioncontainer.h  editactioncontainer.ui  editdbusaction.cpp  editdbusaction.h  editdbusaction.ui  editmode.cpp  editmode.h  editmodebase.ui  editprofileaction.cpp  editprofileaction.h  kcm_lirc.desktop  kcmlirc.cpp  kcmlirc.desktop  kcmlirc.h  kcmlircbase.ui  kcmlircbase.ui.h  modedialog.cpp  modedialog.h  modedialog.ui  model.cpp  model.h  modeslist.cpp  modeslist.h  (+8 more)
kcmlirc/icons/: oxsc-devices-infrared-remote.svgz
kcmremotecontrol/: CMakeLists.txt  Messages.sh  addaction.cpp  addaction.h  addaction.ui  configurationwidget.ui  editactioncontainer.cpp  editactioncontainer.h  editactioncontainer.ui  editdbusaction.cpp  editdbusaction.h  editdbusaction.ui  editkeypressaction.cpp  editkeypressaction.h  editkeypressaction.ui  editprofileaction.cpp  editprofileaction.h  kcm_remotecontrol.desktop  kcmremotecontrol.cpp  kcmremotecontrol.h  modedialog.cpp  modedialog.h  modedialog.ui  model.cpp  model.h  selectprofile.cpp  selectprofile.h
kded/: CMakeLists.txt  Messages.sh  krcd.notifyrc  kremotecontrol.desktop  kremotecontroldaemon.cpp  kremotecontroldaemon.desktop  kremotecontroldaemon.h  kremotecontroldaemon.notifyrc  org.kde.krcd.xml
kded/icons/: oxsc-action-krcd_off.svgz
kdelirc/: CMakeLists.txt  Makefile.am  Messages.sh  action.cpp  action.h  actiondelegator.cpp  actiondelegator.h  actionexecutor.cpp  actionexecutor.h  actionlist.cpp  actionlist.h  arguments.cpp  arguments.h  dbusaction.cpp  dbusaction.h  dbusactionexecutor.cpp  dbusinterface.cpp  dbusinterface.h  executionengine.cpp  iraction.cpp  iraction.h  iractions.cpp  iractions.h  mode.cpp  mode.h  modes.cpp  modes.h  modeswitchaction.cpp  modeswitchaction.h  newargument.cpp  newargument.h  newprofileserver.cpp  newprofileserver.h  profile.cpp  profile.h  profileaction.cpp  profileaction.h  profileactiontemplate.cpp  profileactiontemplate.h  profileserver.cpp  (+5 more)
krcdnotifieritem/: CMakeLists.txt  Messages.sh  krcdnotifieritem.cpp  krcdnotifieritem.desktop  krcdnotifieritem.h  main.cpp
kremotecontrol-plasma-applet/: kremotecontrolapplet.cpp  kremotecontrolapplet.h  plasma-applet-kremotecontrol.desktop
libkremotecontrol/: CMakeLists.txt  Messages.sh  action.cpp  action.h  actionexecutor.cpp  actionexecutor.h  actionlist.cpp  actionlist.h  argument.cpp  argument.h  dbusaction.cpp  dbusaction.h  dbusactionexecutor.cpp  dbusactionexecutor.h  dbusinterface.cpp  dbusinterface.h  executionengine.cpp  executionengine.h  keypressaction.cpp  keypressaction.h  keypressactionexecutor.cpp  keypressactionexecutor.h  kremotecontrol_export.h  kremotecontrolmanager.desktop  mode.cpp  mode.h  modelist.cpp  modelist.h  modeswitchaction.cpp  modeswitchaction.h  newprofileserver.cpp  newprofileserver.h  profile.cpp  profile.h  profileaction.cpp  profileaction.h  profileactiontemplate.cpp  profileactiontemplate.h  profileserver.cpp  profileserver.h  (+14 more)
libkremotecontrol/backends/: CMakeLists.txt
libkremotecontrol/backends/lirc/: CMakeLists.txt  kremotecontrol_lirc.desktop  lircclient.cpp  lircremotecontrol.cpp  lircremotecontrol.h  lircremotecontrolmanager.cpp  lircremotecontrolmanager.h
libkremotecontrol/ifaces/: remotecontrolinterface.cpp  remotecontrolinterface.h  remotecontrolmanagerinterface.cpp  remotecontrolmanagerinterface.h
profiles/: CMakeLists.txt  Makefile.am  amarok.profile.xml  dragonplayer.profile.xml  klauncher.profile.xml  kmix.profile.xml  konqueror.profile.xml  kscd.profile.xml  noatun.profile.xml  okular.profile.xml  powermanagement.profile.xml  profile.dtd  profile.xsd  shutdown.profile.xml  suspend.profile.xml  tomahawk.profile.xml  vlc.profile.xml  vlc2.profile.xml
profiles/old/: dragonplayer.profile.xml  kmix.profile.xml  konqueror.profile.xml  okular.profile.xml  profile.dtd  suspend.profile.xml  vlc.profile.xml
remotes/: AppleRemote.remote.xml  AsusDH.remote.xml  CMakeLists.txt  Makefile.am  RM-0010.remote.xml  SL-6399.remote.xml  cimr100.remote.xml  hauppauge.remote.xml  packbell.remote.xml  remote.dtd  sherwood.remote.xml  sonytv.remote.xml
tests/: CMakeLists.txt  kdelirctest.cpp  kdelirctest.h  profiletest.cpp  profiletest.h  remotetest.cpp  remotetest.h
