########### install files ###############

install( FILES 
    profile.dtd
    amarok.profile.xml
    dragonplayer.profile.xml
    vlc.profile.xml
    kmix.profile.xml
    okular.profile.xml
    klauncher.profile.xml
    #konqueror.profile.xml 
    suspend.profile.xml
    shutdown.profile.xml
    DESTINATION ${DATA_INSTALL_DIR}/profiles)




