########### install files ###############

install( FILES 
    profile.xsd
    amarok.profile.xml
    dragonplayer.profile.xml
    vlc.profile.xml
    kmix.profile.xml
    okular.profile.xml
    klauncher.profile.xml
    konqueror.profile.xml    
    powermanagement.profile.xml
    DESTINATION ${DATA_INSTALL_DIR}/profiles)




